@@ -1,3 +1,8 @@
+2010-11-05  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* solib.c (solib_read_symbols): Call exception_fprintf even without
+	FROM_TTY.  Print also so->so_name.
+
 2010-11-04  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* gdbtypes.h (struct rank): Created subrank.
